Adding support for jdk 6.13 and internal browser support (so we work in Win7x64 properly)